--- a/Notigraghy_xamarin/Notigraghy/Notigraghy.csproj
+++ b/Notigraghy_xamarin/Notigraghy/Notigraghy.csproj
@@ -19,4 +19,17 @@
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="View\FeedView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\NoteListView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
