++ SelectPhotoInGallery Error Correct ScrollView ++ CreateNoteTab ++ ...

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Notigraghy_xamarin/Notigraghy.Android/bin
 /Notigraghy_xamarin/Notigraghy.iOS/obj
 /Notigraghy_xamarin/Notigraghy.iOS/bin
+/Notigraghy_xamarin/.vs
